Spacing issues

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   flex-wrap: nowrap;
   margin: 1em 0;
-  max-width: 36em;
+  max-width: 38em;
   min-height: 100vh;
   padding: 0 1.5em;
 
