--- a/source/_assets/stylesheets/regions/_header.scss
+++ b/source/_assets/stylesheets/regions/_header.scss
@@ -2,5 +2,6 @@ header {
   h1 {
     font-weight: 700;
     letter-spacing: .002em;
+    margin-bottom: .25em;
   }
 }
